--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
 			color: #0072ff;
 			text-decoration: none;
 		}
+		#adsByAdsterra {
+			background: #fff;
+			height: 100vh;
+			left: 0;
+			font-size: calc(16px * var(--scale));
+			overflow: scroll;
+			overflow-x: visible;
+			padding: calc(10px * var(--scale));
+			position: fixed;
+			top: 0;
+			width: calc(488px * var(--scale));
+			z-index: 1000;
+		}
+		#adsByAdsterra iframe {
+			height: calc(60px * var(--scale)) !important;
+			width: calc(468px * var(--scale)) !important;
+		}
+		#adsByAdsterra::-webkit-scrollbar {
+			width: 0;
+		}
 		#donation {
 			align-items: center;
 			background: #0072ff;
@@ -165,7 +185,7 @@
 		main div p:not(:first-child) {
 			padding: calc(10px * var(--scale)) 0 calc(5px * var(--scale)) 0;
 		}
-		main iframe {
+		main .ytvideo {
 			aspect-ratio: 16/9;
 			display: inline;
 			width: 49%;
@@ -175,8 +195,397 @@
 			font-weight: 300;
 			margin-left: calc(22px * var(--scale));
 		}
+		#closeAds {
+			aspect-ratio: 1/1 !important;
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+			position: fixed;
+			top: calc(20px * var(--scale));
+			left: calc(500px * var(--scale));
+			padding: 10px;
+			background: #000;
+			color: #fff;
+			font-size: 24px;
+			cursor: pointer;
+			z-index: 1001;
+			font-size: calc(24px * var(--scale));
+			width: calc(56px * var(--scale));
+			height: calc(56px * var(--scale));
+		}
 	</style>
 	<body>
+		<div id="closeAds">x</div>
+		<div id="adsByAdsterra">
+			<h2>
+				This section helps me keep the extension running, consider
+				enabling ads on this page or consider giving donations to keep this extension running!! Note: I don't suggest clicking on any ads!!
+			</h2>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					key: "e8105a7670134344bc98b1ea9766961c",
+					format: "iframe",
+					height: 60,
+					width: 468,
+					params: {},
+				};
+				document.write(
+					"<scr" +
+						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
+						"ipt>",
+				);
+			</script>
+		</div>
 		<div id="donation">
 			<h1>Happy with the extension!</h1>
 			<h2>Fuel the extension to keep it running!!</h2>
@@ -209,11 +618,7 @@
 						alt="Kofi"
 						loading="lazy" />
 				</a>
-			</div><!-- rsa -->
-			<ins class="adsbygoogle"
-				 style="display:inline-block;width:728px;height:90px"
-				 data-ad-client="ca-pub-2108654491305511"
-				 data-ad-slot="8191899919"></ins>
+			</div>
 			<h2>
 				<a
 					href="https://chromewebstore.google.com/detail/eanofdhdfbcalhflpbdipkjjkoimeeod/reviews/my-review"
@@ -301,9 +706,9 @@
 				</a>
 			</div>
 			<h2>
-				Announcements & Updates (v1.3.8):
+				Announcements & Updates (v1.4.0):
 				<a
-					href="https://tmtechnomania.github.io/Bing-Search-Automator-Mobile-Edition/"
+					href="https://tmtechnomania.github.io/Mobile%20Search%20Automator.html"
 					target="_blank"
 					rel="noopener noreferrer"
 					>Automate Your Mobile Searches</a
@@ -313,13 +718,13 @@
 				Mobile searches on desktop has been blocked by MS, Use this
 				website on your phone to automate your searches:
 				<a
-					href="https://tmtechnomania.github.io/Bing-Search-Automator-Mobile-Edition/"
+					href="https://tmtechnomania.github.io/Mobile%20Search%20Automator.html"
 					target="_blank"
 					rel="noopener noreferrer"
 					>Automate Your Mobile Searches</a
 				>
 			</h3>
-			<p>v1.3.8 has been launched for everyone</p>
+			<p>v1.4.0 has been launched for everyone</p>
 			<p>
 				This update introduces a brand-new feature allowing you to
 				toggle any tab between mobile and your regular desktop, enabling
@@ -328,20 +733,18 @@
 				list of over 60+ different devices to choose from. It aids in
 				debugging websites and testing mobile compatibility and
 				responsiveness.
-			</p><!-- rsa -->
-			<ins class="adsbygoogle"
-				 style="display:inline-block;width:728px;height:90px"
-				 data-ad-client="ca-pub-2108654491305511"
-				 data-ad-slot="8191899919"></ins>
+			</p>
 			<h2>Still confused how to install and use the extension?</h2>
 			<h3>Here is a step by step guide for you.</h3>
 			<iframe
+				class="ytvideo"
 				src="https://www.youtube.com/embed/5CU1gvnsaEg?si=88Gj0Cf5gxrLIuhc"
 				title="YouTube video player"
 				frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen></iframe>
 			<iframe
+				class="ytvideo"
 				src="https://www.youtube.com/embed/We1iXIlTuMo?si=2x_140udMgv5X2u2"
 				title="YouTube video player"
 				frameborder="0"
@@ -358,16 +761,11 @@
 						Click on "Add to Chrome" and confirm the installation.
 					</li>
 				</ol>
-				</script>
 				<strong><p>Step 2: Accessing the Extension</p></strong>
 				<ol>
 					<li>Locate the extension icon in your browser toolbar.</li>
 					<li>Click on the icon to open Rewards Search Automator.</li>
-				</ol><!-- rsa -->
-				<ins class="adsbygoogle"
-					 style="display:inline-block;width:728px;height:90px"
-					 data-ad-client="ca-pub-2108654491305511"
-					 data-ad-slot="8191899919"></ins>
+				</ol>
 				<h4>Performing Searches (Search Tab)</h4>
 				<strong><p>Step 1: Manual Entry</p></strong>
 				<ol>
@@ -393,11 +791,7 @@
 						between each search.
 					</li>
 					<li>Click "Search" to perform searches.</li>
-				</ol><!-- rsa -->
-				<ins class="adsbygoogle"
-					 style="display:inline-block;width:728px;height:90px"
-					 data-ad-client="ca-pub-2108654491305511"
-					 data-ad-slot="8191899919"></ins>
+				</ol>
 				<h4>Scheduling Searches (Schedule Tab):</h4>
 				<strong><p>Step 1: Accessing the Schedule Tab</p></strong>
 				<ol>
@@ -425,11 +819,7 @@
 							random delay of 15-20 minutes.
 						</p></strong
 					>
-				</ol><!-- rsa -->
-				<ins class="adsbygoogle"
-					 style="display:inline-block;width:728px;height:90px"
-					 data-ad-client="ca-pub-2108654491305511"
-					 data-ad-slot="8191899919"></ins>
+				</ol>
 				<h4>Footer Features:</h4>
 				<p>Important Links:</p>
 				<ol>
@@ -456,17 +846,11 @@
 						Click on it to switch to another mobile device name.
 					</li>
 				</ol>
-				</script><!-- rsa -->
-				<ins class="adsbygoogle"
-					 style="display:inline-block;width:728px;height:90px"
-					 data-ad-client="ca-pub-2108654491305511"
-					 data-ad-slot="8191899919"></ins>
 				<!-- </div> -->
 			</div>
 			<h2>Facing issues in earning points?</h2>
 			<h3>Here is a troubleshooting guide for you.</h3>
 			<div id="troubleshoot">
-				<!-- <div> -->
 				<details>
 					<summary>Points Not Collected After Searches</summary>
 					<ol>
@@ -522,11 +906,7 @@
 								</li>
 							</ul>
 						</li>
-					</ol><!-- rsa -->
-					<ins class="adsbygoogle"
-						 style="display:inline-block;width:728px;height:90px"
-						 data-ad-client="ca-pub-2108654491305511"
-						 data-ad-slot="8191899919"></ins>
+					</ol>
 				</details>
 				<details>
 					<summary>
@@ -553,11 +933,7 @@
 								</li>
 							</ul>
 						</li>
-					</ol><!-- rsa -->
-					<ins class="adsbygoogle"
-						 style="display:inline-block;width:728px;height:90px"
-						 data-ad-client="ca-pub-2108654491305511"
-						 data-ad-slot="8191899919"></ins>
+					</ol>
 				</details>
 				<details>
 					<summary>Points Not Collected on First Search</summary>
@@ -572,11 +948,7 @@
 								</li>
 							</ul>
 						</li>
-					</ol><!-- rsa -->
-					<ins class="adsbygoogle"
-						 style="display:inline-block;width:728px;height:90px"
-						 data-ad-client="ca-pub-2108654491305511"
-						 data-ad-slot="8191899919"></ins>
+					</ol>
 				</details>
 				<details>
 					<summary>Searches Are Not Performed</summary>
@@ -591,11 +963,7 @@
 								</li>
 							</ul>
 						</li>
-					</ol><!-- rsa -->
-					<ins class="adsbygoogle"
-						 style="display:inline-block;width:728px;height:90px"
-						 data-ad-client="ca-pub-2108654491305511"
-						 data-ad-slot="8191899919"></ins>
+					</ol>
 				</details>
 				<details>
 					<summary>Schedule Not Working</summary>
@@ -623,12 +991,9 @@
 								</li>
 							</ul>
 						</li>
-					</ol><!-- rsa -->
-					<ins class="adsbygoogle"
-						 style="display:inline-block;width:728px;height:90px"
-						 data-ad-client="ca-pub-2108654491305511"
-						 data-ad-slot="8191899919"></ins>
+					</ol>
 				</details>
+				<!-- <iframe src="https://livingshedhowever.com/up4jggte4?key=3ede97f5a0607f61f9f55f8c2e630f60" frameborder="0" id="ads"></iframe> -->
 				<!-- </div> -->
 			</div>
 			<h2>Still facing issues?</h2>
@@ -644,16 +1009,18 @@
 		</main>
 	</body>
 	<script>
-		(adsbygoogle = window.adsbygoogle || []).push({});
 		const width = screen.width;
 		const scale = width / 1920;
-		console.log(scale);
 		$("body").css("--scale", scale);
 		$(document).ready(function () {
 			const width = screen.width;
 			const scale = width / 1920;
-			console.log(scale);
 			$("body").css("--scale", scale);
+			setTimeout(() => {
+				const width = screen.width;
+				const scale = width / 1920;
+				$("body").css("--scale", scale);
+			}, 10000);
 			const users = $("#users");
 			const set1 = $("#set1");
 			const set2 = $("#set2");
@@ -684,6 +1051,12 @@
 					$("#qrs2").css("display", "none");
 					// console.log("#donation is now visible");
 				}
+			});
+			const closeAds = $("#closeAds");
+			const adsByAdsterra = $("#adsByAdsterra");
+			closeAds.click(() => {
+				adsByAdsterra.css("display", "none");
+				closeAds.css("display", "none");
 			});
 		});
 	</script>
