--- a/affiliate.html
+++ b/affiliate.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta name="clckd" content="de19191372dad7a33a7d1c831a0dafc8" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Thanks for using Extension by GetProjects</title>
