--- a/affiliate.html
+++ b/affiliate.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta name="clckd" content="de19191372dad7a33a7d1c831a0dafc8" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    		<meta http-equiv="refresh" content="1;url=https://tmtechnomania.github.io/">
 		<title>Thanks for using Extension by GetProjects</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
