--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 		}
 	</style>
 	<body>
-		<div id="closeAds">x</div>
+<!-- 		<div id="closeAds">x</div> -->
 <!-- 		<div id="adsByAdsterra">
 			<h2>
 				This section helps me keep the extension running, consider
@@ -589,7 +589,7 @@
 			</script>
 		</div> -->
 		<div id="donation">
-			<h1>Happy with the extension!</h1>
+			<h1>Ads are closed as the Ads provider was not that safe for user 😞</h1>
 			<h2>Fuel the extension to keep it running!!</h2>
 			<span>Scan / Click to visit:</span>
 			<div id="qrs">
