--- a/index.html
+++ b/index.html
@@ -589,8 +589,8 @@
 			</script>
 		</div> -->
 		<div id="donation">
-			<h1>Ads are closed as the Ads provider was not that safe for user 😞</h1>
-			<h2>Fuel the extension to keep it running!!</h2>
+			<h1>Ads are closed as the Ads provider was not that safe for users 😞</h1>
+			<h2>Help fuel the extension to keep it running!!</h2>
 			<span>Scan / Click to visit:</span>
 			<div id="qrs">
 				<a
