--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
 			</script>
 		</div> -->
 		<div id="donation">
-			<h1>Ads are closed as the Ads provider was not that safe for users 😞</h1>
+			<h1>Ads are removed as the Ads provider was not that safe for users 😞</h1>
 			<h2>Help fuel the extension to keep it running!!</h2>
 			<span>Scan / Click to visit:</span>
 			<div id="qrs">
