--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<script src="https://alwingulla.com/88/tag.min.js" data-zone="34103" async data-cfasync="false"></script>
-		<meta name="monetag" content="1e7ed649fc854321abc716f33d676caf">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Thanks for using Extension by GetProjects</title>
@@ -214,389 +212,29 @@
 			width: calc(56px * var(--scale));
 			height: calc(56px * var(--scale));
 		}
-		.banner{
-			height: calc(40px * var(--scale));
+		.banner {
+			height: calc(500px * var(--scale));
 			align-items: center;
 			display: flex;
+			flex-direction: column;
 			justify-content: center;
-			font-size: calc(16px * var(--scale));
+			font-size: calc(40px * var(--scale));
 			background: #000;
 			color: #fff;
+			text-align: center;
+			padding: 40px;
 		}
 	</style>
 	<body>
-		<div class="banner">We don't promote clicking or downloading anything from ads, but ads are important to keep the extension running</div>
-<!-- 		<div id="closeAds">x</div> -->
-<!-- 		<div id="adsByAdsterra">
-			<h2>
-				This section helps me keep the extension running, consider
-				enabling ads on this page or consider giving donations to keep this extension running!! Note: I don't suggest clicking on any ads!!
-			</h2>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-			<script type="text/javascript">
-				atOptions = {
-					key: "e8105a7670134344bc98b1ea9766961c",
-					format: "iframe",
-					height: 60,
-					width: 468,
-					params: {},
-				};
-				document.write(
-					"<scr" +
-						'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' +
-						"ipt>",
-				);
-			</script>
-		</div> -->
+		<div class="banner">
+			<div>
+				⚡"THIS WEBSITE IS NOT A PART OF THE REWARDS SEARCH AUTOMATOR"⚡
+			</div>
+			Sadly, some users who are new🆕 to browsing the internet🛜 are not aware of the fact that Ads are important to keep the extension free✅. At the same time they are unable to distinguish between ads and the extension stuff 😞. So, I have decided to remove the ads from this webpage, and I don't know how long I can keep this extension up and running 🥺. This is just a webpage to help you understand the extension better and get any update about it.
+			<div style="text-transform: uppercase;">
+				If you are still facing issues, feel free to contact me. I will be happy🙂 to help you.
+			</div>
+		</div>
 		<div id="donation">
 			<h1>Enjoying the Extension?</h1>
 			<h2>Help fuel the extension to keep it running!!</h2>
@@ -639,7 +277,6 @@
 				>
 			</h2>
 		</div>
-		<div class="banner">We don't promote clicking or downloading anything from ads, but ads are important to keep the extension running</div>
 		<!-- <div id="users">
 			<div id="set1">
 				<p>hunntik (5)</p>
@@ -1019,7 +656,10 @@
 				>
 			</p>
 		</main>
-		<div class="banner">We don't promote clicking or downloading anything from ads, but ads are important to keep the extension running</div>
+		<div class="banner">
+			We don't promote clicking or downloading anything from ads, but ads
+			are important to keep the extension running
+		</div>
 	</body>
 	<script>
 		const width = screen.width;
