--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 			<div>
 				⚡"THIS WEBSITE IS NOT A PART OF THE REWARDS SEARCH AUTOMATOR"⚡
 			</div>
-			Sadly, some users who are new🆕 to browsing the internet🛜 are not aware of the fact that Ads are important to keep the extension free✅. At the same time they are unable to distinguish between ads and the extension stuff 😞. So, I have decided to remove the ads from this webpage, and I don't know how long I can keep this extension up and running 🥺. This is just a webpage to help you understand the extension better and get any update about it.
+			Sadly, some users who are new🆕 to browsing the internet🛜 are not aware of the fact that "Ads" and "Amazon affiliate links" are important to keep the extension free✅. At the same time they are unable to distinguish between ads and the extension stuff 😞. So, I have decided to remove the ads from this webpage, and I don't know how long I can keep this extension up and running 🥺. This is just a webpage to help you understand the extension better and get any update about it.
 			<div style="text-transform: uppercase;">
 				If you are still facing issues, feel free to contact me. I will be happy🙂 to help you.
 			</div>
