--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 				</a>
 			</div>
 			<h2>
-				Announcements & Updates (v1.4.0):
+				Announcements & Updates (v1.4.1):
 				<a
 					href="https://tmtechnomania.github.io/Mobile%20Search%20Automator.html"
 					target="_blank"
@@ -363,9 +363,10 @@
 					>Automate Your Mobile Searches</a
 				>
 			</h2>
+			<h3>v1.4.1 is releasing soon with fixes for the schedule option. (17-1-24)</h3>
 			<h3>
 				Mobile searches on desktop has been blocked by MS, Use this
-				website on your phone to automate your searches:
+				website on Chrome on your Android phone to automate your searches:
 				<a
 					href="https://tmtechnomania.github.io/Mobile%20Search%20Automator.html"
 					target="_blank"
