--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
 			<div>
 				⚡"THIS WEBSITE IS NOT A PART OF THE REWARDS SEARCH AUTOMATOR"⚡
 			</div>
-			Sadly, some users who are new🆕 to browsing the internet🛜 are not aware of the fact that "Ads" and "Amazon affiliate links" are important to keep the extension free✅. At the same time they are unable to distinguish between ads and the extension stuff 😞. So, I have decided to remove the ads from this webpage, and I don't know how long I can keep this extension up and running 🥺. This is just a webpage to help you understand the extension better and get any update about it.
+<!-- 			Sadly, some users who are new🆕 to browsing the internet🛜 are not aware of the fact that "Ads" and "Amazon affiliate links" are important to keep the extension free✅. At the same time they are unable to distinguish between ads and the extension stuff 😞. So, I have decided to remove the ads from this webpage, and I don't know how long I can keep this extension up and running 🥺. This is just a webpage to help you understand the extension better and get any update about it.
 			<div style="text-transform: uppercase;">
 				If you are still facing issues, feel free to contact me. I will be happy🙂 to help you.
-			</div>
+			</div> -->
 		</div>
 		<div id="donation">
 			<h1>Enjoying the Extension?</h1>
@@ -363,7 +363,7 @@
 					>Automate Your Mobile Searches</a
 				>
 			</h2>
-			<h3>v1.4.1 is releasing soon with fixes for the schedule option. (17-1-24)</h3>
+			<h3>v1.4.2 is releasing soon with fixes for the schedule option. (18-1-24)</h3>
 			<h3>
 				Mobile searches on desktop has been blocked by MS, Use this
 				website on Chrome on your Android phone to automate your searches:
